--- a/legion/templates/frontend/fotos_socios.html
+++ b/legion/templates/frontend/fotos_socios.html
@@ -21,13 +21,14 @@ $(document).ready(function(){$("#galeria").addClass("active")});
 
     <ul id="og-grid" class="og-grid">
       {% for i in fotoSocios %}
-      {% if i%}
-        <li>
-          <a href="#" data-largesrc="{{MEDIA_URL}}{{i.picture}}" data-title="{{i.first_name}} {{i.last_name}}" data-description="{{i.orden_parada}}">
-            <img width="200px" height="200px" src="{{MEDIA_URL}}{{i.picture}}" alt="{{i.picture}}"/>
-          </a>
-        </li>
-        {% endif %}
+      {% if i.picture == "" %}
+      {% else %}
+      <li>
+        <a href="#" data-largesrc="{{MEDIA_URL}}{{i.picture}}" data-title="{{i.first_name}} {{i.last_name}}" data-description="{{i.orden_parada}}">
+          <img width="200px" height="200px" src="{{MEDIA_URL}}{{i.picture}}" alt="{{i.picture}}"/>
+        </a>
+      </li>
+      {% endif %}
       {% endfor %}
     </ul>
 
