--- a/legion/templates/frontend/videos_galeria.html
+++ b/legion/templates/frontend/videos_galeria.html
@@ -7,7 +7,7 @@
 {% endblock css %}
 {% block script %}
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-<script type="text/javascript" src="{% static 'multimedia/grid.js' %}"></script>
+<script type="text/javascript" src="{% static 'multimedia/videos.js' %}"></script>
 <script type="text/javascript">
 $(document).ready(function(){$("#galeria").addClass("active")});
 </script>
@@ -19,15 +19,17 @@ $(document).ready(function(){$("#galeria").addClass("active")});
 {% endblock script %}
 {% block contenido %}
 
-    <ul id="og-grid" class="og-grid">
+    <ul id="" class="">
       {% for i in videosSocios %}
-      {% if i%}
-        <li>
-          <a href="#" data-largesrc="{{MEDIA_URL}}{{i.video}}" data-title="{{i.first_name}} {{i.last_name}}" data-description="{{i.orden_parada}}">
-            <img width="200px" height="200px" src="{{MEDIA_URL}}{{i.picture}}" alt="{{i.picture}}"/>
-          </a>
+      {% if i.video == "" %}
+        
+      {% else %}
+        <li style="display:inline">
+            <video width="350px" height="300px" controls>
+              <source src="{{MEDIA_URL}}{{i.video}}" type="video/mp4">Video
+            </video>
         </li>
-        {% endif %}
+      {% endif %}
       {% endfor %}
     </ul>
 
