--- a/legion/templates/backend/desactivo.html
+++ b/legion/templates/backend/desactivo.html
@@ -114,6 +114,11 @@
           <ul class="sidebar-menu">
             <li class="header">MENU</li>
             <li>
+                <a href="{% url 'temporada' %}">
+                  <i class="fa fa-th"></i> <span>Apertura</span>
+                </a>
+            </li>
+            <li>
               <a href="{% url 'logout' %}">
                 <i class="fa fa-user"></i> <span>Salir</span>
               </a>
