--- a/legion/templates/backend/base.html
+++ b/legion/templates/backend/base.html
@@ -121,7 +121,7 @@
             
             <li>
               <a href="{% url 'perfil' %}">
-                <i class="fa fa-user"></i> <span>Perfil</span>
+                <i class="fa fa-user"></i> <span>profile</span>
               </a>
             </li>
             <li>
