--- a/legion/templates/backend/desactivo.html
+++ b/legion/templates/backend/desactivo.html
@@ -1,180 +1,5 @@
+{% extends 'backend/base_inactivo.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-  <head lang="es">
-    <meta charset="UTF-8">
-    <title>{% block title %} {% endblock title %}</title>
-    <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-    <!-- Bootstrap 3.3.2 -->
-    <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <!-- Ionicons -->
-    <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-    <!-- Theme style -->
-    <link href="{% static 'dist/css/AdminLTE.min.css' %}" rel="stylesheet" type="text/css" />
-    <!-- AdminLTE Skins. Choose a skin from the css/skins 
-         folder instead of downloading all of them to reduce the load. -->
-    <link href="{% static 'dist/css/skins/_all-skins.min.css' %}" rel="stylesheet" type="text/css" />
-
-    {% block css %}{% endblock css %}
-    {% block style %}
-
-    {% endblock style %}
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class="skin-blue">
-    <!-- Site wrapper -->
-    <div class="wrapper">
-      
-      <header class="main-header">
-        <a href="/home" class="logo"><b>Avelino </b>SASAR</a>
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top" role="navigation">
-          <!-- Sidebar toggle button-->
-          <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <div class="navbar-custom-menu">
-            <ul class="nav navbar-nav">
-              <!-- Notifications: style can be found in dropdown.less -->
-              <li class="dropdown notifications-menu">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <i class="fa fa-bell-o"></i>
-                  <span class="label label-warning">1</span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li class="header">Saldo Actual.</li>
-                  <li>
-                    <!-- inner menu: contains the actual data -->
-                    <ul class="">
-                      <li>
-                        S/ {{el_saldo}} Nuevos Soles.
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="footer"><a href="#"></a></li>
-                </ul>
-              </li>
-              <!-- User Account: style can be found in dropdown.less -->
-              <li class="dropdown user user-menu">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="{{MEDIA_URL}}{{usuario.picture}}" class="user-image" alt="User Image"/>
-                  <span class="hidden-xs">{{usuario.first_name}} {{usuario.last_name}}</span>
-                </a>
-                <ul class="dropdown-menu">
-                  <!-- User image -->
-                  <li class="user-header">
-                    <img src="{{MEDIA_URL}}{{usuario.picture}}" class="img-circle" alt="User Image" />
-                    <p>
-                      {{usuario.first_name}} {{usuario.last_name}}
-                      <small>Miembro desde {{usuario.create_at}}</small>
-                    </p>
-                  </li>
-                  <!-- Menu Body -->
-                  <!-- Menu Footer-->
-                  <li class="user-footer">
-                    <div class="pull-right">
-                      <a href="{% url 'logout' %}" class="btn btn-default btn-flat">Salir</a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </header>
-
-      <!-- =============================================== -->
-
-      <!-- Left side column. contains the sidebar -->
-      <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-          <!-- Sidebar user panel -->
-          <div class="user-panel">
-            <div class="pull-left image">
-              <img src="{{MEDIA_URL}}{{usuario.picture}}" class="img-circle" alt="User Image" />
-            </div>
-            <div class="pull-left info">
-              <p>{{usuario.username}}</p>
-            </div>
-          </div>
-          <!-- /.search form -->
-          <!-- sidebar menu: : style can be found in sidebar.less -->
-          <ul class="sidebar-menu">
-            <li class="header">MENU</li>
-            <li>
-                <a href="{% url 'temporada' %}">
-                  <i class="fa fa-th"></i> <span>Apertura</span>
-                </a>
-            </li>
-            <li>
-              <a href="{% url 'logout' %}">
-                <i class="fa fa-user"></i> <span>Salir</span>
-              </a>
-            </li>
-          </ul>          
-        </section>
-        <!-- /.sidebar -->
-      </aside>
-
-      <!-- =============================================== -->
-
-      <!-- Content Wrapper. Contains page content -->
-      <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-          <h1>
-            {% block page_title %}
-
-            {% endblock page_title %}
-          </h1>
-          <ol class="breadcrumb">
-            {% block breadcrumb %}
-
-            {% endblock breadcrumb %}
-          </ol>
-        </section>
-
-        <!-- Main content -->
-        <section class="content">
-
-          <!-- Default box -->
+{% block contenido %}
           <h2 class="text-danger text-center">Tiene una deuda y tiene que cancelar para reactivarse</h2>
-
-        </section><!-- /.content -->
-      </div><!-- /.content-wrapper -->
-
-      <footer class="main-footer">
-        <div class="pull-right hidden-xs">
-          <b>Version</b> 2.0
-        </div>
-        <strong>Copyright &copy; 2015 <a href="http://almsaeedstudio.com">Sasar Avelinos</a>.</strong> All rights reserved.
-      </footer>
-    </div><!-- ./wrapper -->
-
-    <!-- jQuery 2.1.3 -->
-    <script src="{% static 'plugins/jQuery/jQuery-2.1.3.min.js' %}"></script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-      <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-    <!-- SlimScroll -->
-    <script src="{% static 'plugins/slimScroll/jquery.slimScroll.min.js' %}" type="text/javascript"></script>
-    <!-- FastClick -->
-    <script src="{% static 'plugins/fastclick/fastclick.min.js' %}" type="text/javascript"></script>
-    <!-- AdminLTE App -->
-    <script src="{% static 'dist/js/app.min.js' %}" type="text/javascript"></script>}
-    {% block scripts %}
-    {% endblock scripts %}
-  </body>
-</html>
+{% endblock contenido %}
