--- a/legion/templates/backend/galeria_video.html
+++ b/legion/templates/backend/galeria_video.html
@@ -6,7 +6,7 @@
 			Video
 		</video>
 		<form class="col-lg-5" method='post' action='' role="form" enctype="multipart/form-data">{% csrf_token %}
-			<h3 class="text-center text-info">MODIFICAR VIDEO</h3>
+			<h3 class="text-center text-info">CAMBIAR VIDEO</h3>
 			<table>
 				<tbody>
 					<tr>
