--- a/legion/templates/backend/base.html
+++ b/legion/templates/backend/base.html
@@ -281,7 +281,7 @@
         <div class="pull-right hidden-xs">
           <b>Version</b> 2.0
         </div>
-        <strong>Copyright &copy; 2015 <a href="http://almsaeedstudio.com">Sasar Avelinos</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2015 <a href="#">Sasar Avelinos</a>.</strong> All rights reserved.
       </footer>
     </div><!-- ./wrapper -->
 
