--- a/legion/templates/backend/ingresos.html
+++ b/legion/templates/backend/ingresos.html
@@ -22,7 +22,7 @@
               <form name="" action="" method="post" class="col-md-5">{% csrf_token %}
                   <p>
                     <label for="id_monto_apertura">N° de Recibo:</label>
-                    <input type="text" name="recibo" id="id_recibo" class="form-control" />
+                    <input type="text" name="recibo" id="id_recibo" class="form-control" required/>
                   </p>
                   <p>
                     <label for="id_temporada">Nombre de Socio:</label>
@@ -35,13 +35,13 @@
                   </p>
                   <p>
                     <label for="id_inicio">Monto a Pagar:</label>
-                    <input type="number" name="monto" id="id_monto" class="form-control" />
+                    <input type="number" name="monto" id="id_monto" class="form-control" required/>
                   </p>
                   <p>
                     <input type="hidden" name="apertura" id="id_apertura" value="{{apertura.id}}"/>
                   </p>
                   <p> 
-                    <input type="submit" class="btn btn-large btn-success" value="Ingresar Pago">
+                    <input type="submit" class="btn btn-large btn-success" value="Ingresar Pago" required>
                   </p>
 
                 </form>
@@ -79,7 +79,7 @@
             {{pagos.monto}} soles
           </span>
         </td>
-        <td>{{pagos.create_at}}</td>
+        <td>{{pagos.create_at|date:"SHORT_DATE_FORMAT"}}</td>
       </tr>
       {% endfor %}
     </tbody></table>
