--- a/legion/templates/backend/nueva_junta_directiva.html
+++ b/legion/templates/backend/nueva_junta_directiva.html
@@ -54,7 +54,7 @@
           <input type="hidden" name="apertura" id="id_apertura" value="{{temporada.id}}"/>
         </p>
         <p> 
-          <input type="submit" class="btn btn-large btn-success" value="Ingresar Pago">
+          <input type="submit" class="btn btn-large btn-success" value="Guardar">
         </p>
 
       </form>
