--- a/legion/templates/backend/galeria_video.html
+++ b/legion/templates/backend/galeria_video.html
@@ -18,6 +18,22 @@
 		      			</td>
 	      			</tr>
 	      			<tr>
+						<th>
+							<label>Titulo:</label>
+						</th>
+						<td>
+		      				{{formulario.video_titulo}}
+		      			</td>
+	      			</tr>
+	      			<tr>
+						<th>
+							<label>Descripcion:</label>
+						</th>
+						<td>
+		      				{{formulario.video_descripcion}}
+		      			</td>
+	      			</tr>
+	      			<tr>
 	      				<th>
 
 	      				</th>
