--- a/legion/templates/frontend/index.html
+++ b/legion/templates/frontend/index.html
@@ -59,7 +59,7 @@
             <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
           </div>
 
-          <iframe class="col-lg-6" height="350px" src="https://www.youtube.com/embed/_Qg_29ciQUE" frameborder="0" allowfullscreen></iframe>
+          <iframe class="col-lg-6" height="350px" src="{{video_portada.nombre}}" frameborder="0" allowfullscreen></iframe>
 
           <div class="col-lg-3 text-center">
             <img src="{% static 'img/noticias/avelino.png' %}" alt="Generic placeholder image" style="width: 140px; height: 170px;">
