--- a/legion/templates/frontend/responsabilidad_social.html
+++ b/legion/templates/frontend/responsabilidad_social.html
@@ -8,5 +8,16 @@ $(document).ready(function(){$("#responsabilidad_social").addClass("active")});
   <div class="row">
     <h1 class="text-primary text-center">RESPONSABILIDAD SOCIAL</h1>
   </div>
+  {% for noticia in las_noticias %}
+  <div class="row">
+    <img class="col-lg-6" src="{{MEDIA_URL}}{{noticia.picture}}">
+    <div class="col-lg-6">
+      <h3 class="text-info">{{noticia.titulo}}</h3><br/>
+      <span style="color:#C0C0C0;font-size:8pt;">{{noticia.user}}</span>
+      <span style="color:#C0C0C0;font-size:8pt;">{{noticia.update_at}}</span>
+      <br/><br/><p class="text-justify">{{noticia.descripcion}}</p>
+    </div>
+  </div>
+{% endfor %}
 <br/><br/><br/><br/>
 {% endblock contenido %}
